# Jigson

./: .gitignore  CMakeLists.txt  IMappingProfile.hpp  Jigson.hpp  Jigson.sln  Jigson.vcxproj  Jigson.vcxproj.filters  LICENSE  Mapper.hpp  MapperFactory.hpp  README.md  vcpkg.json
cmake/: Jigson-config.cmake.in
custom-overlay/jigson/: portfile.cmake  usage  vcpkg.json
examples/: mapping_with_conditionals.hpp  nested_object_mapping.hpp  object_mapping_with_lists.hpp  simple_object_mapping.hpp
src/: Main.cpp
src/Examples/: ConditionalMapping.hpp  ListMapping.hpp  NestedObjectMapping.hpp  SimpleObjectMapping.hpp
src/Include/: IMappingProfile.hpp  Jigson.hpp  Mapper.hpp  MapperFactory.hpp  MappingProfile.hpp  Types.h
src/Tests/: CMakeLists.txt  Jigson.Tests.cpp
tests/: Jigson.Tests.cpp
